--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
-  <div class="container-fluid" style="vertical-align: middle;">
-    <a class="navbar-brand" style="height: auto; padding: 0;" href="#">
+  <div class="container-fluid" style="vertical-align: middle">
+    <a class="navbar-brand" style="height: auto; padding: 0" href="#">
       <img
         class="nav-img"
         src="{{ site.url }}{{ site.baseurl }}/images/BIRO_Logo.png"
@@ -8,7 +8,7 @@
         height="40"
       />
     </a>
-    <a style="color: aliceblue; font-size: 20px;">BIRO</a>
+    <a style="color: aliceblue; font-size: 20px">BIRO</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -21,11 +21,9 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto" style="float: right;">
+      <ul class="navbar-nav ml-auto" style="float: right">
         <li class="nav-item">
-          <a class="nav-link" href="{{ site.url }}{{ site.baseurl }}/home"
-            >Home</a
-          >
+          <a class="nav-link" href="{{ site.url }}{{ site.baseurl }}/">Home</a>
         </li>
         <li class="nav-item dropdown">
           <a
