--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
   <div class="container-fluid" style="vertical-align: middle">
-    <a class="navbar-brand" style="height: auto; padding: 0" href="#">
+    <!-- <a class="navbar-brand" style="height: auto; padding: 0" href="#">
       <img
         class="nav-img"
         src="{{ site.url }}{{ site.baseurl }}/images/BIRO_Logo.png"
@@ -8,7 +8,8 @@
         height="40"
       />
     </a>
-    <a style="color: aliceblue; font-size: 20px">BIRO</a>
+    <a style="color: aliceblue; font-size: 20px">BIRO</a> -->
+    <a style="color: rgb(162,207,201); font-size: 20px">B</a><a style="color: rgba(255,255,255,.5); font-size: 20px;">iomechantronics and&nbsp</a><a style="color: rgb(162,207,201); font-size: 20px">I</a><a style="color: rgba(255,255,255,.5); font-size: 20px;">ntelligent&nbsp</a><a style="color: rgb(162,207,201); font-size: 20px">Ro</a><a style="color: rgba(255,255,255,.5); font-size: 20px;">botics (BIRO) Lab </a>
     <button
       class="navbar-toggler"
       type="button"
