Updated product and top nav bar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,12 @@
       />
     </a>
     <a style="color: aliceblue; font-size: 20px">BIRO</a> -->
-    <a style="color: rgb(162,207,201); font-size: 20px">B</a><a style="color: rgba(255,255,255,.5); font-size: 20px;">iomechantronics and&nbsp</a><a style="color: rgb(162,207,201); font-size: 20px">I</a><a style="color: rgba(255,255,255,.5); font-size: 20px;">ntelligent&nbsp</a><a style="color: rgb(162,207,201); font-size: 20px">Ro</a><a style="color: rgba(255,255,255,.5); font-size: 20px;">botics (BIRO) Lab </a>
+    <a class="logo-text-special">B</a
+    ><a class="logo-text-normal">iomechantronics and&nbsp</a>
+    <a class="logo-text-special">I</a
+    ><a class="logo-text-normal">ntelligent&nbsp</a
+    ><a class="logo-text-special">Ro</a
+    ><a class="logo-text-normal">botics (BIRO) Lab </a>
     <button
       class="navbar-toggler"
       type="button"
@@ -54,8 +59,8 @@
               href="{{ site.url }}{{ site.baseurl }}/products#exoskeletons"
               >Exoskeletons</a
             >
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <!-- <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a> -->
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -73,8 +78,8 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
             <a class="dropdown-item" href="#">Action</a>
             <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <!-- <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a> -->
           </div>
         </li>
         ...
