--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ h1, h2, h3, h4, h5, h6 {
   background: #fff;
   transition: all 0.5s;
   z-index: 997;
-  padding: 15px 0;
+  padding: 12px 0;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
@@ -83,7 +83,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1;
   font-weight: 700;
   letter-spacing: 0.5px;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 #header .logo a {
@@ -123,9 +123,9 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   color: #111;
   transition: 0.3s;
-  font-size: 13px;
-  text-transform: uppercase;
-  font-weight: 600;
+  font-size: 17px;
+  text-transform: none;
+  font-weight: 500;
   font-family: "Roboto", sans-serif;
 }
 
@@ -574,7 +574,7 @@ section {
 .section-title h2 {
   font-size: 32px;
   font-weight: bold;
-  text-transform: uppercase;
+  text-transform: none;
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
@@ -799,7 +799,7 @@ section {
   font-size: 14px;
   font-weight: 400;
   line-height: 1;
-  text-transform: uppercase;
+  text-transform: none;
   color: #4d4643;
   transition: all 0.3s;
   border-radius: 4px;
@@ -927,7 +927,7 @@ section {
   font-size: 42px;
   line-height: 60px;
   margin-bottom: 20px;
-  text-transform: uppercase;
+  text-transform: none;
 }
 
 .about-us .content h3 {
@@ -1045,7 +1045,7 @@ section {
 .skills .progress .skill {
   padding: 0;
   margin: 0 0 6px 0;
-  text-transform: uppercase;
+  text-transform: none;
   display: block;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
@@ -2147,7 +2147,7 @@ section {
   line-height: 1;
   font-weight: 500;
   letter-spacing: 1px;
-  text-transform: uppercase;
+  text-transform: none;
   color: #fff;
 }
 
